# neuralnetwork

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp  neuralnetwork.cpp  neuralnetwork.hpp  neuron.cpp  neuron.hpp  neuronlayer.cpp  neuronlayer.hpp
